--- a/frontend/src/main-styles.scss
+++ b/frontend/src/main-styles.scss
@@ -22,3 +22,10 @@ html,
 body {
   height: 100%;
 }
+.centered-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
