--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -13,15 +13,23 @@
       <button class="button is-primary has-text-white" routerLink="/new-list">+ New List</button>
     </div>
     <div class="task-list-container has-background-light">
-      <h1 class="title has-text-primary">
-        Tasks
-      </h1>
-      <div class="task" *ngFor="let task of tasks" (click)="onTaskClick(task)" [ngClass]="{'complete':task.completed}">
-        <p>{{task.title}}</p>
+      <div *ngIf="tasks">
+        <h1 class="title has-text-primary">
+          Tasks
+        </h1>
+        <div class="task" *ngFor="let task of tasks" (click)="onTaskClick(task)"
+          [ngClass]="{'complete':task.completed}">
+          <p>{{task.title}}</p>
+        </div>
+        <h3 class="empty-state-text" *ngIf="tasks.length === 0">There are no tasks here! Click the add button to create
+          a new task</h3>
+        <button class="circle-add-button button is-primary" routerLink="./new-task">
+          +
+        </button>
       </div>
-      <button class="circle-add-button button is-primary" routerLink="./new-task">
-        +
-      </button>
+      <div *ngIf="!tasks">
+        <h3 class="empty-state-text">Please select a list from the sidebar</h3>
+      </div>
     </div>
   </div>
 </div>
